# mult_kinect_ros2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mult_kinects.rviz
include/mult_kinect_ros2/: kinect_driver.hpp  mult_kinect_ros2_node.hpp
launch/: mult_kinect_ros2.launch.py
src/: kinect_driver.cpp  mult_kinect_ros2_node.cpp
