<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mult_kinect_ros2</name>
  <version>1.0.0</version>
  <description>Publicador de imagens de múltiplos Kinects v1 usando ROS2</description>

  <maintainer email="marina.batista@ee.ufcg.edu.br">Marina Batista</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>libfreenect</depend>

  <exec_depend>libfreenect-dev</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
